<resources>
    <string name="app_name">Binus Ezy Food</string>
    <string name="food">Foods</string>
    <string name="drink">Drinks</string>
    <string name="snack">Snacks</string>
    <string name="top_up">Top Up</string>
    <string name="my_order">My Order</string>
    <string name="order_more">Order More</string>
    <string name="pay_now">Pay Now</string>
    <string name="title_activity_map">MapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_top_up">TopUpActivity</string>

</resources>